<resources>
    <string name="hello_blank_fragment">Helloooo</string>
    <string name="app_name">ProteinOrder</string>
    <string name="textTitle">Order Protein</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="vanilla">Vanilla</string>
    <string name="chocolate">Chocolate</string>
    <string name="mocha">Mocha</string>
    <string name="peanutbutter">Peanut Butter</string>
    <string name="ten">Ten</string>
    <string name="fifteen">Fifteen</string>
    <string name="twenty">Twenty</string>
    <string name="thirty">Thirty</string>

    <string name="subtotal_price">Subtotal %s</string>

    <string name="flavor">Flavor</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="summary">Summary</string>
    <string name="total_price">Total</string>
    <string name="send_order">Send Order</string>
</resources>