<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FlavorFragment">
    <data>
        <variable
            name="viewModel"
            type="com.yseko.proteinorder.model.OrderViewModel" />
        <variable
            name="flavorFragment"
            type="com.yseko.proteinorder.FlavorFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">


        <RadioGroup
            android:id="@+id/flavor_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/vanilla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vanilla"
                android:checked="@{viewModel.flavor.equals(@string/vanilla)}"
                android:onClick="@{()->viewModel.setFlavor(@string/vanilla)}"/>

            <RadioButton
                android:id="@+id/chocolate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chocolate"
                android:checked="@{viewModel.flavor.equals(@string/chocolate)}"
                android:onClick="@{()->viewModel.setFlavor(@string/chocolate)}"/>

            <RadioButton
                android:id="@+id/mocha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mocha"
                android:checked="@{viewModel.flavor.equals(@string/mocha)}"
                android:onClick="@{()->viewModel.setFlavor(@string/mocha)}"/>

            <RadioButton
                android:id="@+id/peanutbutter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peanutbutter"
                android:checked="@{viewModel.flavor.equals(@string/peanutbutter)}"
                android:onClick="@{()->viewModel.setFlavor(@string/peanutbutter)}"/>
        </RadioGroup>
        <TextView
            android:id="@+id/subtotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@{@string/subtotal_price(viewModel.price)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flavor_options" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtotal"
            android:text="@string/cancel"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_marginEnd="10dp"
            android:onClick="@{()->flavorFragment.cancelOrder()}"/>

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{()->flavorFragment.nextScreen()}"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintTop_toBottomOf="@+id/subtotal" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>